<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/singlerow_shape_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--1st row-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forecastListElementHeightDetail">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/currentWeatherLatitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/historyTextViewLat"
                    android:layout_weight="1"
                    android:text="Lat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/currentWeatherLongitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/historyTextViewLon"
                    android:layout_weight="1"
                    android:text="Lon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        <!--2nd row-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forecastListElementHeightDetail">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/currentWeatherPressure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/historyTextViewPressure"
                    android:layout_weight="1"
                    android:text="Pressure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/currentWeatherWindspeed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/historyTextViewWindSpeed"
                    android:layout_weight="1"
                    android:text="Windspeed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        <!--3rd row-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forecastListElementHeightDetail">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/currentWeatherWindChill"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/historyTextViewWindChill"
                    android:layout_weight="1"
                    android:text="Windchill"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/currentWeatherTemperature"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/historyTextViewTemp"
                    android:layout_weight="1"
                    android:text="Temp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        <!--4th row-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forecastListElementHeightDetail">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center"
                    android:id="@+id/historyTextViewDateTime"
                    android:layout_weight="1"
                    android:text="DateTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>